tests/baselines/reference/enumIdenticalIdentifierValues.errors.txt
tests/cases/compiler/enumIdenticalIdentifierValues.ts(2,5): error TS2300: Duplicate identifier '1'.
tests/cases/compiler/enumIdenticalIdentifierValues.ts(3,5): error TS2300: Duplicate identifier '1.0'.


==== tests/cases/compiler/enumIdenticalIdentifierValues.ts (2 errors) ====
    enum Enum {
        1,
        ~
!!! error TS2300: Duplicate identifier '1'.
        1.0
        ~~~
!!! error TS2300: Duplicate identifier '1.0'.
    }